--- a/styles/main.css
+++ b/styles/main.css
@@ -39,15 +39,14 @@ p {
 }
 
 #blog-layout {
-  width: 500px;
+  width: 503px;
   background-color: #f2e3e7;
-  border: 3px solid #f1f1e3;
+  border-right: 3px solid #f1f1e3;
+  border-bottom: 3px solid #f1f1e3;
+  border-left: 3px solid #f1f1e3;
   margin: 0 auto;
-  margin-top: 60px;
   float: left;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  text-align: center;
 }
 
 #blog-header {
@@ -64,15 +63,22 @@ p {
 
 .blog-sidebar {
   width: 100px;
-  height: 200px;
-  background-color: #f2e3e7;
-  border: 3px solid #f1f1e3;
-  margin-top: 60px;
+  background-color: #efe8da;
+  border-left: 3px solid #f1f1e3;
+  border-bottom: 3px solid #f1f1e3;
+  margin: 0 px;
   float: left;
+  text-align: left;
 }
 
-.page-icon {
-  float: left;
+ul {
+  padding-inline-start: 0;
+}
+
+li {
+  border-bottom: 2px dotted #d5b2bb;
+  text-indent: 2px;
+  color: #b37e8b;
 }
 
 /* widescreen displays */
