--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,7 @@ p {
 
 .header {
   margin: 0px auto;
-  text-align: left;
+  text-align: center;
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
@@ -19,7 +19,7 @@ p {
   background-color: #d5b2bb;
 }
 
-.navbar {
+.bar {
   text-align: left;
   font-size: 10px;
   color: #eeeeee;
