site background fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body {
-  background: url(doseoftheplagues.github.io/images-gifs/DSCN3803.JPEG);
+  background: url(https://doseoftheplagues.github.io/images-gifs/DSCN3803.JPEG);
   background-size: cover;
 }
 
