add tech blog img

--- a/styles/main.css
+++ b/styles/main.css
@@ -90,7 +90,7 @@ p {
 }
 
 .alt-blog-image {
-  height: 300px;
+  width: 400px;
   border: 2px solid #d5b2bb;
   float: right;
   margin-left: 10px;
