--- a/styles/main.css
+++ b/styles/main.css
@@ -90,12 +90,10 @@ p {
 }
 
 .alt-blog-image {
-  width: 400px;
+  object-fit: contain;
   border: 2px solid #d5b2bb;
   float: right;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top: 2px;
+  margin: 10px;
 }
 
 .blog-body {
