--- a/styles/main.css
+++ b/styles/main.css
@@ -90,7 +90,7 @@ p {
 }
 
 .alt-blog-image {
-  object-fit: contain;
+  width: 100%;
   border: 2px solid #d5b2bb;
   float: right;
   margin: 10px;
